--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,3 +1,65 @@
-<html lang="en">
-Hello something
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <title>Shop</title>
+    <meta charset="utf-8" http-equiv="Content-Type">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="js/shop.js"></script>
+</head>
+<body>
+	<div class="container m-auto">
+		<div class="row">
+			<div class="col-4 m-1">
+				Фамилия: <br>
+				<input type="text" name="lastName" id="lastName"><br>
+				Имя: <br>
+				<input type="text" name="firstName" id="firstName"><br>
+				Отчество: <br>
+				<input type="text" name="middleName" id="middleName"><br>
+				Дата рождения: <input type="date" name="birthdate" id="birthdate"> 
+				<br>
+				<button onclick="createCustomer()">Добавить нового клиента</button>
+				<br>
+				<p><textarea rows="10" cols="30" name="response" id="responsePost"></textarea></p>
+			</div>
+			<div class="col-4 m-1">
+				<button onclick="getCustomers()">Вывести всех клиентов</button><br>
+				<button onclick="getCustomerById()">Вывести клиента по id</button> <br>
+				id: <input type="number" name="customerId" id="customerId" value=1 min="1"><br>
+				<textarea rows="25" cols="30" name="response" id="responseGet"></textarea>
+			</div>
+			<div class="col-3 m-1">
+				Параметры отображения: <br>
+				Количество элементов на странице: <br>
+				<input type="number" name="countPages" id="countPages" value=10 min="1" ><br>
+				Номер страницы:  <br>
+				<input type="number" name="pageNumber" id="pageNumber" value=1 min="1" max="1000"> <br>
+				Параметры поиска:<br>
+				Фамилия: <br>
+				<input type="text" name="lastName" id="lastNameParam"><br>
+				Имя: <br>
+				<input type="text" name="firstName" id="firstNameParam"><br>
+				Отчество: <br>
+				<input type="text" name="middleName" id="middleNameParam"><br>
+				Дата рождения: <input type="date" name="birthdate" id="birthdateParam"> 
+				<br>
+				Дата рождения в период: <br>
+				с <input type="date" name="birthDate" id="birthdateFrom"> <br> 
+				по <input type="date" name="birthDate" id="birthdateTo"> <br>
+				Параметры сортировки: <br>
+				<select id="sortBy">
+				  <option value="firstName">По имени</option>
+				  <option value="lastName">По фамилии</option>
+				  <option value="middleName">По отчеству</option>
+				  <option value="birthdate">По дате рождения</option>
+				</select><br>
+				<input type="radio" name="order" id="asc">ASC <br>
+				<input type="radio" name="order" id="desc">DESC
+				<button onclick="addSorting()">Добавить в параметры сортировки</button>
+				<button onclick="cleanSorting()">Сбросить параметры сортировки</button>
+			</div>
+		</div>
+	</div>
+</body>
 </html>
