added pages for device and fixed bug with color service

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,6 +12,10 @@
 		<a href="pages/NewCustomer.html" class="text-info">Добавить нового клиента</a>
 		<br>
 		<a href="pages/GetCustomers.html" class="text-info">Поиск по клиентам</a>
+		<br>
+		<a href="pages/NewDevice.html" class="text-info">Добавить новое устройство</a>
+		<br>
+		<a href="pages/GetDevices.html" class="text-info">Поиск по устройствам</a>
 	</div>	
 </body>
 </html>
