added pages for bill

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8" http-equiv="Content-Type">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="js/shop.js"></script>
 </head>
 <body>
 	<div class="container">
@@ -16,6 +15,10 @@
 		<a href="pages/NewDevice.html" class="text-info">Добавить новое устройство</a>
 		<br>
 		<a href="pages/GetDevices.html" class="text-info">Поиск по устройствам</a>
+		<br>
+		<a href="pages/NewBill.html" class="text-info">Добавить новый чек</a>
+		<br>
+		<a href="pages/GetBills.html" class="text-info">Поиск по чекам</a>
 	</div>	
 </body>
 </html>
