--- a/src/main/resources/static/pages/GetDevices.html
+++ b/src/main/resources/static/pages/GetDevices.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8" http-equiv="Content-Type">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="../js/device.js"></script>
 </head>
 <body>
 	<div class="col-11 m-auto">
@@ -13,7 +12,7 @@
 			<a href="../index.html" class="text-info">На главную</a>
 		</div>
 		<div class="row">
-			<div class="col-4 m-1">
+			<div class="col-3 m-1">
 				<h5>Параметры поиска:</h5>
 				Тип устройства: <br>
 				<select id="deviceTypeParam">
@@ -34,10 +33,10 @@
 				по <input type="date" name="manufactureDate" id="manufactureDateTo"> <br>
 				Цвет: <br>
 				<input type="checkbox" name="colorRB" id="colorRB">Фильтровать по цвету <br>
-		   		<p>Укажите цвет: <input type="color" name="color" id="colorParam" value="#ff0000">
+		   		<p>Укажите цвет: <input type="color" name="color" id="color" value="#ff0000">
 		   		<button onclick="checkColor()">Выбрать</button></p>
 				Название цвета: <br>
-				<input type="text" name="colorName" id="colorNameParam"><br>
+				<input type="text" name="colorName" id="colorName"><br>
 				Цена: <br>
 				<input type="number" name="price" id="priceParam" min="0.00" step="0.10"><br>
 				Цена в диапазоне: <br>
@@ -46,7 +45,7 @@
 				
 				
 			</div>
-			<div class="col-4 m-1">
+			<div class="col-5 m-1">
 				<button onclick="getDevices()">Вывести все устройства</button><br>
 				<button onclick="getDeviceById()">Вывести устройство по id</button> <br>
 				id: <input type="number" name="deviceId" id="deviceId" value=1 min="1"><br>
@@ -79,4 +78,5 @@
 		</div>
 	</div>
 </body>
+<script src="../js/device.js"></script>
 </html>
